--- a/Pccma.Services.PraiseTeam/Web.config
+++ b/Pccma.Services.PraiseTeam/Web.config
@@ -5,8 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="PccmaWorshipPraiseTeam" connectionString="Data Source=(localdb)\v11.0; Database = WorshipPraiseTeams; Trusted_Connection=true;"
-      providerName="System.Data.SqlClient" />
+    <add name="PccmaWorshipPraiseTeam" connectionString="Data Source=(localdb)\v11.0; Database = WorshipPraiseTeams; Trusted_Connection=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
