--- a/Pccma.Services.PraiseTeam/packages.config
+++ b/Pccma.Services.PraiseTeam/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="6.1.1" targetFramework="net452" />
   <package id="CommonServiceLocation" version="1.0.0" targetFramework="net452" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
   <package id="CommonServiceLocator.NinjectAdapter.Unofficial" version="3.2.2.0" targetFramework="net452" />
