--- a/Pccma.Services.PraiseTeam/Pccma.Services.PraiseTeam.csproj
+++ b/Pccma.Services.PraiseTeam/Pccma.Services.PraiseTeam.csproj
@@ -137,6 +137,10 @@
       <HintPath>..\..\..\..\Visual Studio 2013\Projects\Pccma.PraiseTeam.Database\Pccma.PraiseTeam.Database.DataAccess\bin\Debug\Pccma.PraiseTeam.Database.Model.dll</HintPath>
     </Reference>
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Web.Cors, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Cors.5.2.3\lib\net45\System.Web.Cors.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -146,6 +150,10 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Web.Extensions" />
+    <Reference Include="System.Web.Http.Cors, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Cors.5.2.3\lib\net45\System.Web.Http.Cors.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Web.OData, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.OData.6.0.0\lib\net45\System.Web.OData.dll</HintPath>
       <Private>True</Private>
@@ -181,6 +189,7 @@
     <Compile Include="App_Start\Ninjectconfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\PraiseTeamController.cs" />
+    <Compile Include="Controllers\PraiseTeamMemberController.cs" />
     <Compile Include="Dto\PraiseTeam.cs" />
     <Compile Include="Dto\PraiseTeamMember.cs" />
     <Compile Include="Dto\PrimaryKeyObject.cs" />
